# smtp

./: .gitignore  .gitmodules  .luacheckrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  FindTarantool.cmake  LICENSE  README.md  smtp-scm-1.rockspec
.github/workflows/: packaging.yml  packaging_and_testing.yml  publish.yml  reusable_testing.yml  testing.yml
cmake/: BuildLibCURL.cmake  FindCARES.cmake
debian/: .gitignore  changelog  control  copyright  prebuild.sh  rules
rpm/: prebuild.sh  tarantool-smtp.spec
smtp/: CMakeLists.txt  init.lua  lib.c  smtpc.c  smtpc.h  version.lua
test/: attach.test.lua  smtp.test.lua  test.sh
